# xabi

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
abi/snapshots/: aarch64-apple-darwin.txt  x86_64-pc-windows-msvc.txt  x86_64-unknown-linux-gnu.txt
crates/xabi/: Cargo.toml
crates/xabi-arrow/: Cargo.toml
crates/xabi-arrow/src/: lib.rs
crates/xabi-assert/: Cargo.toml
crates/xabi-assert/src/: lib.rs
crates/xabi-bytes/: Cargo.toml
crates/xabi-bytes/src/: lib.rs
crates/xabi-macros/: Cargo.toml
crates/xabi-macros/src/: args.rs  data_macro.rs  lib.rs  module_macro.rs  opaque_macro.rs  tests.rs  trait_macro.rs  type_shape.rs
crates/xabi-macros/src/method/: export.rs  handle.rs  mod.rs  shape.rs
crates/xabi-macros/tests/snapshots/: data_type.rs  export_async_trait.rs  opaque_handle.rs  trait_object_return.rs
crates/xabi/examples/: ffi_roundtrip.rs  future_roundtrip.rs
crates/xabi/src/: contract.rs  error.rs  ffi.rs  future.rs  layout.rs  lib.rs  library.rs  macros.rs  raw.rs  status.rs
crates/xabi/tests/: compile_fail.rs  data.rs  trait_shapes.rs
crates/xabi/tests/ui/unsupported_shapes/: data_borrowed_field.rs  data_borrowed_field.stderr  data_nested_borrowed_field.rs  data_nested_borrowed_field.stderr  data_raw_pointer_field.rs  data_raw_pointer_field.stderr  data_tuple_field.rs  data_tuple_field.stderr  trait_borrowed_argument.rs  trait_borrowed_argument.stderr  trait_borrowed_return.rs  trait_borrowed_return.stderr  trait_impl_trait_argument.rs  trait_impl_trait_argument.stderr  trait_mut_bytes_argument.rs  trait_mut_bytes_argument.stderr  trait_object_generic_bound.rs  trait_object_generic_bound.stderr  trait_object_missing_static.rs  trait_object_missing_static.stderr  trait_object_pair_shape.rs  trait_object_pair_shape.stderr  trait_tuple_payload.rs  trait_tuple_payload.stderr
docs/: abi-design.md  release.md
examples/access-like/access-like-abi/: Cargo.toml
examples/access-like/access-like-abi/src/: lib.rs  registry.rs
examples/access-like/access-like-abi/xabi/snapshots/opendal.Access/: aarch64-apple-darwin.txt  x86_64-pc-windows-msvc.txt  x86_64-unknown-linux-gnu.txt
examples/access-like/access-like-abi/xabi/snapshots/opendal.oio.Copy/: aarch64-apple-darwin.txt  x86_64-pc-windows-msvc.txt  x86_64-unknown-linux-gnu.txt
examples/access-like/access-like-abi/xabi/snapshots/opendal.oio.Delete/: aarch64-apple-darwin.txt  x86_64-pc-windows-msvc.txt  x86_64-unknown-linux-gnu.txt
examples/access-like/access-like-abi/xabi/snapshots/opendal.oio.List/: aarch64-apple-darwin.txt  x86_64-pc-windows-msvc.txt  x86_64-unknown-linux-gnu.txt
examples/access-like/access-like-abi/xabi/snapshots/opendal.oio.Read/: aarch64-apple-darwin.txt  x86_64-pc-windows-msvc.txt  x86_64-unknown-linux-gnu.txt
examples/access-like/access-like-abi/xabi/snapshots/opendal.oio.Write/: aarch64-apple-darwin.txt  x86_64-pc-windows-msvc.txt  x86_64-unknown-linux-gnu.txt
examples/access-like/host/: Cargo.toml
examples/access-like/host/src/: lib.rs
examples/access-like/plugin/: Cargo.toml
examples/access-like/plugin/python/access_like_plugin/: __init__.py
examples/access-like/plugin/src/: lib.rs
examples/access-like/plugin/tests/: roundtrip.rs
examples/access-like/plugin/tests/python/: check_package.py
examples/access-like/plugin/xabi/snapshots/: aarch64-apple-darwin.txt  x86_64-pc-windows-msvc.txt  x86_64-unknown-linux-gnu.txt
examples/async-plugin/async-plugin-abi/: Cargo.toml
examples/async-plugin/async-plugin-abi/src/: lib.rs
examples/async-plugin/async-plugin-abi/xabi/snapshots/xabi.test.AsyncPlugin/: aarch64-apple-darwin.txt  x86_64-pc-windows-msvc.txt  x86_64-unknown-linux-gnu.txt
examples/async-plugin/host/: Cargo.toml
examples/async-plugin/host/src/: lib.rs
examples/async-plugin/plugin/: Cargo.toml
examples/async-plugin/plugin/src/: lib.rs
examples/async-plugin/plugin/tests/: roundtrip.rs
examples/async-plugin/plugin/xabi/snapshots/: aarch64-apple-darwin.txt  x86_64-pc-windows-msvc.txt  x86_64-unknown-linux-gnu.txt
examples/scalar-index/host/: Cargo.toml
examples/scalar-index/host/python/: check_package.py
examples/scalar-index/host/src/: lib.rs
examples/scalar-index/plugin/: Cargo.toml
examples/scalar-index/plugin/python/scalar_index_plugin/: __init__.py
examples/scalar-index/plugin/src/: lib.rs
examples/scalar-index/plugin/tests/: roundtrip.rs
examples/scalar-index/plugin/tests/python/: check_package.py
examples/scalar-index/plugin/xabi/snapshots/: aarch64-apple-darwin.txt  x86_64-pc-windows-msvc.txt  x86_64-unknown-linux-gnu.txt
examples/scalar-index/scalar-index-abi/: Cargo.toml
examples/scalar-index/scalar-index-abi/src/: arrow.rs  error.rs  host.rs  lib.rs  plugin.rs  registry.rs
examples/scalar-index/scalar-index-abi/xabi/snapshots/lance.IndexBuildProgress/: aarch64-apple-darwin.txt  x86_64-pc-windows-msvc.txt  x86_64-unknown-linux-gnu.txt
examples/scalar-index/scalar-index-abi/xabi/snapshots/lance.IndexStore/: aarch64-apple-darwin.txt  x86_64-pc-windows-msvc.txt  x86_64-unknown-linux-gnu.txt
examples/scalar-index/scalar-index-abi/xabi/snapshots/lance.ScalarIndex/: aarch64-apple-darwin.txt  x86_64-pc-windows-msvc.txt  x86_64-unknown-linux-gnu.txt
examples/scalar-index/scalar-index-abi/xabi/snapshots/lance.ScalarIndexPlugin/: aarch64-apple-darwin.txt  x86_64-pc-windows-msvc.txt  x86_64-unknown-linux-gnu.txt
xtask/: Cargo.toml
xtask/src/: main.rs
