[workspace]
members = [
    "crates/xabi",
    "crates/xabi-macros",
    "crates/xabi-arrow",
    "crates/xabi-bytes",
    "xtask",
    "examples/scalar-index/scalar-index-abi",
    "examples/scalar-index/plugin",
    "examples/scalar-index/host",
    "examples/async-plugin/async-plugin-abi",
    "examples/async-plugin/plugin",
    "examples/async-plugin/host",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/xuanwo/xabi"

[workspace.dependencies]
async-trait = "0.1.83"
futures = "0.3.31"
libloading = "0.8.5"
prettyplease = "0.2.25"
proc-macro2 = "1.0.92"
pyo3 = "0.28.3"
quote = "1.0.38"
syn = { version = "2.0.95", features = ["full", "extra-traits"] }
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread", "sync"] }
