[package]
name = "xtask"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
scalar-index-abi = { path = "../examples/scalar-index/scalar-index-abi" }
xabi = { path = "../crates/xabi" }
xabi-arrow = { path = "../crates/xabi-arrow" }
xabi-bytes = { path = "../crates/xabi-bytes" }
