[package]
name = "xabi-macros"
version = "0.1.0-alpha.2"
description = "Procedural macros for xabi"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[dev-dependencies]
prettyplease.workspace = true
