[package]
name = "xabi"
version = "0.1.0"
description = "Generate stable native ABI glue from Rust traits"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"

[dependencies]
libloading.workspace = true
xabi-macros.workspace = true

[dev-dependencies]
futures.workspace = true
trybuild.workspace = true
