[package]
name = "async-plugin"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-plugin-abi = { path = "../async-plugin-abi" }
xabi.workspace = true

[dev-dependencies]
xabi-assert.workspace = true
