[package]
name = "scalar-index-host"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
async-trait.workspace = true
scalar-index-abi = { path = "../scalar-index-abi" }
tokio.workspace = true
xabi = { path = "../../../crates/xabi" }

[dev-dependencies]
scalar-index-plugin = { path = "../plugin" }
