[package]
name = "scalar-index-plugin"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait.workspace = true
futures.workspace = true
scalar-index-abi = { path = "../scalar-index-abi" }
xabi = { path = "../../../crates/xabi" }
