[package]
name = "scalar-index-plugin"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
python = ["dep:pyo3"]

[dependencies]
async-trait.workspace = true
futures.workspace = true
pyo3 = { workspace = true, optional = true }
scalar-index-abi = { path = "../scalar-index-abi" }
xabi = { path = "../../../crates/xabi" }
xabi-bytes = { path = "../../../crates/xabi-bytes" }
