[package]
name = "scalar-index-abi"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
async-trait.workspace = true
futures.workspace = true
tokio.workspace = true
xabi.workspace = true

[dev-dependencies]
xabi-assert.workspace = true
